# roland-sp404-mk2-converter

./: .gitignore  CHATGPT.md  README.md  ROLAND_SP404_MKII.md  pyproject.toml
.claude/: settings.local.json
config/: packs.yaml  presets.yaml
output/ROLAND/IMPORT/: audit_20260228_184544.md
roland_converter/: __init__.py  analysis.py  audio.py  categorizer.py  cli.py  config.py  pipeline.py  renamer.py  report.py  scanner.py
roland_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
roland_converter/factories/: __init__.py  base.py  from_mars.py  generic.py  melody.py
scripts/: sp404_image.py
